--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion-3d": "^12.4.13",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
